--- a/app/rol/templates/listar_rol.html
+++ b/app/rol/templates/listar_rol.html
@@ -8,6 +8,7 @@
     <td><b><i>Id del Rol</i></b></td>
     <td><b><i>Nombre del Rol</i></b></td>
     <td><b><i>Descripción</i></b></td>
+     <td><b><i>Acciones</i></b></td>
 </tr>
 </thead>
 <tbody>
@@ -22,8 +23,8 @@
     <td>{{ qroles.nombre_rol }}</td>
     <td>{{ qroles.descripcion }}</td>
     <td>
-        <a class="btn btn-primary" href="{% url 'rol:rol_modificar' qroles.id %}"></a>
-        <a class="btn btn-danger" htref="{% url 'rol:rol_eliminar' qroles.id %}"></a>
+        <a class="btn btn-primary" href="{% url 'rol:rol_modificar' qroles.id %}">Modificar</a>
+        <a class="btn btn-danger" htref="{% url 'rol:rol_eliminar' qroles.id %}">Eliminar</a>
     </td>
 </tr>
     {% endfor %}
