--- a/app/usuario/templates/listar_usuario.html
+++ b/app/usuario/templates/listar_usuario.html
@@ -56,6 +56,7 @@
                                             <th>Username</th>
                                             <th>Cedula</th>
                                             <th>Eliminar</th>
+                                             <th>Modificar</th>
                                      </tr>
                                 </thead>
                                 {% for usu in usuario %}
@@ -66,6 +67,7 @@
                                             <td>{{usu.user.get_username}} </td>
                                             <td>{{ usu.cedula }}</td>
                                              <td><a class="glyphicon glyphicon-trash addlink" href="{% url 'eliminarusuario' usu.id %}"></a></td>
+                                            <td><a class="glyphicon glyphicon-pencil addlink" href="{% url 'modificarusuarioadmin' usu.id %}"></a></td>
                                      </tr>
                                 </tbody>
                                       {% endif %}
