--- a/app/rol/templates/mod_rol.html
+++ b/app/rol/templates/mod_rol.html
@@ -17,15 +17,15 @@
                 <li>
                     <a href="{% url 'rol:rol_crear' %}">Crear Roles</a>
                 </li>
+
                 <li>
-                    <a href="#">Modificar Roles</a>
+                    <a href="{% url 'rol:rol_listar' %}">Administrar Roles</a>
                 </li>
+
                 <li>
-                    <a href="{% url 'rol:rol_listar' %}">Listar Roles</a>
+                    <a href="{% url 'rol:rol_asignar' %}">Asignar Roles</a>
                 </li>
-                <li>
-                    <a href="#">Eliminar Roles</a>
-                </li>
+
             </ul>
         </div>
         <!-- /#sidebar-wrapper -->
