--- a/app/rol/templates/modificar_rol.html
+++ b/app/rol/templates/modificar_rol.html
@@ -6,7 +6,7 @@
 
 
 <!--  -->
-    <legend><b><i>Creación de Roles</i></b></legend>
+    <legend><b><i>Modificación de Rol</i></b></legend>
 
 <div class="form-group">
      <label class="col-md-4 control-label ">Nombre del Rol</label>
