--- a/app/login/templates/cuenta.html
+++ b/app/login/templates/cuenta.html
@@ -1,50 +1,112 @@
- {% extends "../../templates/../../usuario/templates/base.html" %}
+{% extends "base.html" %}
 
-{% block title%} PoliMba'e {% endblock%}
+{% block title%} PoliMbae {% endblock%}
 
-{% block body %}
+{% block body%}
 
-<div id="page-content-wrapper">
+
+     <div id="wrapper">
+    <!-- Sidebar -->
+        <div id="sidebar-wrapper">
+            <ul class="sidebar-nav">
+                <li class="sidebar-brand">
+                    <a href="#">
+                        Menú Principal
+                    </a>
+                </li>
+                <li>
+                    <a href="#">Usuarios</a>
+                </li>
+                <li>
+                    <a href="#">Recursos</a>
+                </li>
+                <li>
+                    <a href="#">Mantenimiento</a>
+                </li>
+            </ul>
+        </div>
+        <!-- /#sidebar-wrapper -->
+
+
+<!-- Page Content -->
+        <div id="page-content-wrapper">
+            <div class="container">
+      <div class="header clearfix">
+        <nav>
+          <ul class="nav nav-pills pull-right">
+
+
+              <li role="presentation"><a href="{% url 'login' %}">Volver</a></li>
+
+          </ul>
+        </nav>
+        <h3 class="text-muted list-group">Crear Cuenta Nueva</h3>
+      </div>
             <div class="container-fluid">
-				<div class="breadcrumbs">
-					<a href="{% url 'homepage' %}">Home</a>
-					&rsaquo; Mi cuenta
-                    <div class="btn bg-primary">
-                        <a href="{% url 'logout' %}">Cerrar Sesion</a>
-                    </div>
-				</div>
                 <div class="row">
                     <div class="col-lg-12">
-                        <h2  class="list-group-item active">
-                            Datos Personales {{usuario.username}}
-						</h2>
-						<form action="" class="" >{% csrf_token %}
-							<div class="form-group ">
-								<label for="username">Username:         {{ usuario.user.username }} </label>
+                        <form action="" class="" method="POST" >{% csrf_token %}
+			<div class="form-group ">
+                <div class="form-group ">
+								<label for="cedula">Cedula</label>
+								<input class="form-control" name="cedula" id="cedula" type="number"  required>
+							</div>
+								<label for="username">Username</label>
+								<input class="form-control" name="username" id="username" type="text"  required>
 							</div>
 							<div class="form-group ">
-								<label for="nombre">Nombre: {{ usuario.user.first_name}}</label>
-
+								<label for="nombre">Nombre</label>
+								<input class="form-control" name="nombre" id="nombre" type="text"  required>
 							</div>
 							<div class="form-group">
-								<label for="apellido">Apellido: {{ usuario.user.last_name }}</label>
+								<label for="apellido">Apellido</label>
+								<input type="text" id="apellido" class="form-control" name= "apellido"  required>
+
 							</div>
 							<div class="form-group ">
-								<label for="direccion">Dirección:{{usuario.direccion}}</label>
+								<label for="direccion">Dirección</label>
+								<input class="form-control" name="direccion" id="direccion" type="text" >
 							</div>
 							<div class="form-group ">
-								<label for="email">Email:           {{ usuario.user.email }}</label>
+								<label for="email">Email</label>
+								<input class="form-control" name="email" id="email" type="email" required>
 							</div>
                             <div class="form-group ">
-								<label for="categoria">Categoría:           {{ usuario.user.email }}</label>
+								<label for="telefono">Teléfono</label>
+								<input class="form-control" name="telefono" id="telefono" type="text" required>
 							</div>
-						</form>
+                            <div class="form-group">
+                            <label for="option">Categoría</label>
+                            <select class="form-control" name="categoria" id="option" >
+                                    <option value="Funcionario">Funcionario</option>
+                                    <option value="Titular">Titular</option>
+                                    <option value="Adjunto">Adjunto</option>
+                                    <option value="Asistente">Asistente</option>
+                                    <option value="Encargado">Encargado de Cátedra</option>
+                                    <option value="Auxiliar">Auxiliar</option>
+                                    <option value="Alumno">Alumno</option>
+                                </select>
+                            </div>
 
+						{% if mensaje %}
+                                {% if mensaje == 'Espere el correo de confirmación' %}
+                                    <div class="alert-success" role="alert">
+                                    {{ mensaje }}
+                                    </div>
+                                {% else %}
+                                    <div class="alert-danger form-control" role="alert">
+                                    {{ mensaje }}
+                                    </div>
+                                {% endif %}
+                        {% endif %}
 
-                      <!--  <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Mostrar/Ocultar Menu</a> -->
+      <button class="btn bg bottom-left" >Crear</button>
+  </form>
                     </div>
                 </div>
             </div>
         </div>
-
+        <!-- /#page-content-wrapper -->
+        </div>
 {% endblock %}
+
