--- a/app/login/templates/login.html
+++ b/app/login/templates/login.html
@@ -68,17 +68,16 @@
     <div class="container">
 
       <form method="post" class="form-signin">{% csrf_token %}
-        <h2 class="form-signin-heading">Login</h2>
+        <h2 class="form-signin-heading" align="center">Login</h2>
         <label for="inputUser" class="sr-only">User</label>
         <input type="text" id="username" class="form-control" name="username" placeholder="User" required autofocus>
         <label for="inputPassword" class="sr-only">Password</label>
         <input type="password" id="inputPassword" class="form-control" name="password" placeholder="Password" required>
-        <!--<div class="checkbox">
-          <label>
-            <input type="checkbox" value="remember-me"> Remember me
-          </label>
-        </div>-->
         <button class="btn btn-lg btn-primary btn-block" type="submit">Entrar</button>
+        <div align="center">
+          <a class=" addlink" href="{% url 'cuenta' %}">Crear Cuenta</a>
+        </div>
+
 
         {% if message%}
                     <div class="alert-danger form-control" role="alert">
