--- a/app/usuario/templates/crear_usuario.html
+++ b/app/usuario/templates/crear_usuario.html
@@ -15,9 +15,6 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">Administración</a>
-                </li>
-                <li>
                     <a href="#">Usuarios</a>
                 </li>
                 <li>
@@ -43,7 +40,7 @@
             <li role="presentation"><a href="{% url 'logout' %}">Salir</a></li>
           </ul>
         </nav>
-        <h3 class="text-muted list-group">Alta de Usuarios</h3>
+        <h3 class="text-muted list-group">Creación de Usuarios</h3>
       </div>
             <div class="container-fluid">
                 <div class="row">
@@ -91,11 +88,7 @@
                                     <option value="Alumno">Alumno</option>
                                 </select>
                             </div>
-                           <!-- <div>
-                                <select class="form-control" name="rol" id="option" >
-                                    <option value="{for rol in Role} "
-                                </select>
-                            </div>-->
+
 							<div class="form-group">
 								<label for="password" class="text-primary">Ingresar Contraseña</label>
 								<input class="password-reset-link" id="password" name="password" type="password"  required>
