--- a/app/usuario/templates/eliminar_usuario.html
+++ b/app/usuario/templates/eliminar_usuario.html
@@ -14,9 +14,6 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">Administración</a>
-                </li>
-                <li>
                     <a href="#">Usuarios</a>
                 </li>
                 <li>
@@ -42,7 +39,7 @@
             <li role="presentation"><a href="{% url 'logout' %}">Salir</a></li>
           </ul>
         </nav>
-        <h3 class="text-muted list-group">Baja de Usuario</h3>
+        <h3 class="text-muted list-group">Eliminación de Usuario</h3>
       </div>
             <div class="container-fluid">
                 <div class="row">
