--- a/app/recurso/templates/eliminar_recurso.html
+++ b/app/recurso/templates/eliminar_recurso.html
@@ -4,7 +4,8 @@
 
 {% block body%}
 
-    <div id="wrapper">
+
+     <div id="wrapper">
     <!-- Sidebar -->
         <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
@@ -14,16 +15,10 @@
                     </a>
                 </li>
                 <li>
-                    <a href="{% url 'modrol' %}">Roles</a>
+                    <a href="#">Usuarios</a>
                 </li>
                 <li>
-                    <a href="{% url 'moduser' %}">Usuarios</a>
-                </li>
-                <li>
-                    <a href="{% url 'modrec' %}">Recursos</a>
-                </li>
-                <li>
-                    <a href="#">Reservas</a>
+                    <a href="#">Recursos</a>
                 </li>
                 <li>
                     <a href="#">Mantenimiento</a>
@@ -39,25 +34,24 @@
       <div class="header clearfix">
         <nav>
           <ul class="nav nav-pills pull-right">
-              <li role="presentation"><a href="#menu-toggle"  id="menu-toggle">Menú</a></li>
-            <li role="presentation"><a href="{% url 'logout' %}">Salir</a></li>
 
+              <li role="presentation"><a href="{% url 'home' %}">Home</a></li>
+              <li role="presentation"><a href="{% url 'modrec' %}">Volver</a></li>
+            <li role="presentation"><a href="{% url 'logout' %}">Salir</a></li>
           </ul>
         </nav>
-        <h3 class="text-muted">PoliMba'e</h3>
+        <h3 class="text-muted list-group">Eliminación de Recursos</h3>
       </div>
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-12">
-                        <h1>Bienvenido <strong>{{ user }}</strong> a PoliMba'e</h1>
-                        <p> Sistema Gestor de Recursos de la Facultad Politécnica  </p>
-                        <p>Universidad Nacional de Asunción</p>
+                        <form action="" class="" method="POST" >{% csrf_token %}
+
+                        </form>
                     </div>
                 </div>
             </div>
         </div>
         <!-- /#page-content-wrapper -->
-
-  </div>
-
+        </div>
 {% endblock %}
