--- a/templates/reserva/listar_reserva_especifica.html
+++ b/templates/reserva/listar_reserva_especifica.html
@@ -24,12 +24,12 @@
     {% if object_list %}
     {% for qreserva in object_list %}
 <tr>
-    <td>{{ qreserva.profile}}</td>
-    <td>{{ qreserva.profile.categoria.nombre}}</td>
-    <td>{{ qreserva.recurso.tipo_id.nombre_recurso }}</td>
-    <td>{{ qreserva.fecha_reserva}}</td>
-    <td>{{ qreserva.hora_inicio}}</td>
-     <td>{{qreserva.hora_fin}}</td>
+    <td>{{ qespecifica.profile}}</td>
+    <td>{{ qespecifica.profile.categoria.nombre }}</td>
+    <td>{{ qespecifica.recurso.tipo_id.nombre_recurso }}</td>
+    <td>{{ qespecifica.fecha_reserva }}</td>
+    <td>{{ qespecifica.hora_inicio }}</td>
+     <td>{{ qespecifica.hora_fin }}</td>
     <td>
 
     </td>
