--- a/templates/rol/eliminar_rol.html
+++ b/templates/rol/eliminar_rol.html
@@ -1,4 +1,4 @@
-{% extends 'base/base.html' %}
+i{% extends 'base/base.html' %}
 {% block title %}Eliminar Rol {% endblock %}
 {% block content %}
 
