Agregado Consultar Reurso

--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -53,6 +53,7 @@
                                             <li><a href="{% url 'recurso:recurso_crear' %}">Crear Recurso</a></li>
                                             <li><a href="{% url 'recurso:recurso_listar' %}">Lista de Recursos</a></li>
                                             <li><a href="{% url 'recurso:tiporecurso_listar' %}">Lista Tipo de Recursos</a></li>
+                                            <li><a href="{% url 'recurso:buscar_recurso' %}">Consultar Recursos</a></li>
 
 			                        	</ul>
 			                        </li>
