--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -28,9 +28,9 @@
 		                      		<li class="dropdown">
 		                        		<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Usuario <span class="caret"></span></a>
 				                        <ul class="dropdown-menu" role="menu">
-				                        	<li><a href="{% url 'usuarios:crearusuario' %}">Crear</a></li>
+				                        	<li><a href="{% url 'usuarios:crearusuario' %}">Crear Usuarios</a></li>
 				                        	<li><a href="{% url 'usuarios:listaruser' %}">Modificar/Eliminar</a></li>
-
+                                            <li><a href="{% url 'usuarios:crearcategoria' %}">Crear Categoria</a></li>
 				                        </ul>
 		                      		</li>
 			                        <li class="dropdown">
