--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -97,7 +97,7 @@
 </div>
 	<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
 	<script src="{% static 'js/bootstrap.min.js' %}"></script>
-
+    <script src="{% static 'js/Chart.min.js' %}"></script>
 	{% block extrajs %}
 	{% endblock %}
 
