Solucionado problemas al guardar Tipo de recurso con campos vacios. Solucionado Template de Modificar Recurso

--- a/templates/recurso_pr/crear_recurso_pr.html
+++ b/templates/recurso_pr/crear_recurso_pr.html
@@ -28,7 +28,7 @@
             <a class= "btn btn-default" href="{% url 'recurso_pr:recurso_pr_listar' %}">Cancelar</a>
         </div>
                             {% if mensaje %}
-								{% if mensaje == 'Reserva Agendada Exitosamente.' %}
+								{% if mensaje == 'Recurso guardado Exitosamente.' %}
 									<div class="alert-success" role="alert">
 									{{ mensaje }}
 									</div>
