--- a/templates/recurso_pr/modificar_recurso.html
+++ b/templates/recurso_pr/modificar_recurso.html
@@ -5,19 +5,14 @@
 <form class="form-horizontal" method="post"> {% csrf_token %}
     <h3 class="text-muted list-group">Modificación de Recurso</h3>
     <div class="form-group">
-        <label class="col-md-4 control-label ">Caracteristica</label>
-        <div class="col-md-4">{{ form.ctra_id }}</div>
+        <label class="col-md-4 control-label ">Tipo de Recurso</label>
+        <div class="col-md-4">{{ form.tipo_id }}</div>
     </div>
     <div class="form-group">
-        <label class="col-md-4 control-label ">Descripcion</label>
-        <div class="col-md-4">{{ form.descripcion }}</div>
+        <label class="col-md-4 control-label ">Estado</label>
+        <div class="col-md-4">{{ form.estado }}</div>
     </div>
 
-    <div class="form-group">
-        <label class="col-md-4 control-label ">Recurso</label>
-        <div class="col-md-4"> {{ form.recurso }}
-        </div>
-    </div>
     <hr>
      <div class="form-group">
         <label class="col-md-6 control-label" for="singlebutton"></label>
