--- a/templates/reserva/detalle.html
+++ b/templates/reserva/detalle.html
@@ -2,7 +2,7 @@
 {% block title %}Busqueda Reserva {% endblock %}
 {% block content %}
 
-<h3 class="text-muted list-group">Reservas Generales</h3>
+<h3 class="text-muted list-group">Busqueda para la Creacion de Reservas Generales</h3>
     <hr>
     <label aria-describedby=""> <h4> Ingrese el Nombre del Recurso para generar la busqueda</h4></label>
 
