--- a/templates/reserva/modificar_especifica.html
+++ b/templates/reserva/modificar_especifica.html
@@ -1,9 +1,9 @@
 {% extends 'base/base.html' %}
-{% block title %} Modificar Reserva {% endblock %}
+{% block title %} Modificar Reserva Especifica {% endblock %}
 {% block content %}
 
 <form class="form-horizontal" method="post"> {% csrf_token %}
-    <h3 class="text-muted list-group">Modificación de Reserva Realizada</h3>
+    <h3 class="text-muted list-group">Modificación de Reserva Especifica Realizada</h3>
 
     <div class="form-group">
         <label class="col-md-4 control-label ">Tipo de Recurso</label>
@@ -32,11 +32,11 @@
         <label class="col-md-6 control-label" for="singlebutton"></label>
         <div class="col-md-4">
             <button class="btn btn-primary" type="submit">GUARDAR</button>
-                <a class= "btn btn-default" href="{% url 'reserva:reserva_listar' %}">Cancelar</a>
+                <a class= "btn btn-default" href="{% url 'reserva:reserva_especifica_listar' %}">Cancelar</a>
         </div>
     </div>
  {% if mensaje %}
-								{% if mensaje == 'Reserva Agendada Exitosamente.' %}
+								{% if mensaje == 'Reserva Especifica Agendada Exitosamente.' %}
 									<div class="alert-success" role="alert">
 									{{ mensaje }}
 									</div>
