--- a/templates/mantenimiento/listar_mantenimiento.html
+++ b/templates/mantenimiento/listar_mantenimiento.html
@@ -7,7 +7,7 @@
 		<tr>
 			<td>#</td>
 			<td>Nombre</td>
-			<td>Recurso ID</td>
+			<td>Identificador del Recurso</td>
             <td>Tipo de Mantenimiento</td>
             <td>Fecha</td>
             <td>Operaciones</td>
@@ -20,7 +20,7 @@
 		<tr>
             <td>{{ mantenimiento.id }}</td>
 			<td>{{ mantenimiento.tipo_recurso }}</td>
-            <td>{{ mantenimiento.recurso.recurso_id }}</td>
+            <td>{{ mantenimiento.recurso.descripcion }}</td>
             <td>{{ mantenimiento.tipo }}</td>
             <td>{{  mantenimiento.fecha_entrega}}</td>
 			<td>
