--- a/templates/rol/home_rol.html
+++ b/templates/rol/home_rol.html
@@ -31,8 +31,8 @@
                           </div>
                               <div class="content-holder">
                             <h3>Listas del Modulo de Recurso</h3>
-                           <a class="btn btn-info btn-read-more" href="{% url 'recurso:recurso_listar' %}">Recursos</a>
-                              <a class="btn btn-info btn-read-more" href="{% url 'recurso:tiporecurso_listar' %}">Tipos Recursos</a>
+                           <a class="btn btn-info btn-read-more" href="{% url 'recurso_pr:recurso_pr_listar' %}">Recursos</a>
+                              <a class="btn btn-info btn-read-more" href="{% url 'recurso_pr:recurso_pr_listar_tipo' %}">Tipos Recursos</a>
                           </div>
                                <div class="content-holder">
                             <h3>Listas del Modulo de Reserva</h3>
