--- a/templates/recurso_pr/crear_recurso_pr.html
+++ b/templates/recurso_pr/crear_recurso_pr.html
@@ -8,11 +8,11 @@
             {{ form.tipo_id}}
         </div>
         <div class="form-group ">
-            <label for="fecha_fin">Estado</label>
+            <label for="estado">Estado</label>
             {{ form.estado}}
         </div>
         <div class="form-group ">
-            <label for="fecha_fin">Identificador del Recurso</label>
+            <label for="nombre">Identificador del Recurso</label>
             {{ form.descripcion}}
         </div>
         <div class="form-group">
