--- a/templates/grafico/index.html
+++ b/templates/grafico/index.html
@@ -1,38 +1,61 @@
-{% extends "base/base.html" %}
+{% load staticfiles %}
+<!DOCTYPE html>
+<html lang="es">
+<head>
+	<meta charset="UTF-8">
+
+	{% block extrastatic %}
+	{% endblock %}
+
+	<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+	<title>{% block title %}Document {% endblock %}</title>
+</head>
+<body>
+<div class="container">
+
+	{% block navbar %}
+		<div class="bs-docs-section clearfix">
+		    <div class="row">
+		        <div class="col-lg-12">
+		            <div class="bs-component">
+		            	<nav class="navbar navbar-default">
+		                	<div class="container-fluid">
+		                  		<div class="navbar-header">
+		                    		<a class="navbar-brand text-center" >PolimBa'e</a>
+
+		                  		</div>
+
+		                  	<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+
+		                    	<ul class="nav navbar-nav navbar-right">
+                                    <li><a href="{% url 'login' %}">Ingresar</a></li>
+
+		                    	</ul>
+		                    </div>
+		                </div>
+		            </nav>
+		        </div>
+           	</div>
+        </div>
+    </div>
+
+	{% endblock %}
 
 
-{% block title%} Graficos {% endblock%}
+	{% block content %}
+	<h4>	Bloque de contenido		</h4>
+	{% endblock %}
 
 
-{% block content%}
-    <a class="btn btn-primary" href="{% url 'grafico:mantenimientos'  %}">Mantenimientos</a>
-
-    <script src="/static/js/Chart.js"></script>
-  <canvas id="myChart" width="500" height="400"></canvas>
-
-        <script>
-        var names = JSON.parse('{{ names|safe }}');
-        var cont= JSON.parse('{{ cont|safe }}');
-var barData = {
-    labels: names,
-            datasets: [{
-                label: 'Produtos',
-                data:  cont ,
-                fillColor : "rgba(151,187,205,0.5)",
-				strokeColor : "rgba(151,187,205,0.8)",
-				highlightFill : "rgba(151,187,205,0.75)",
-				highlightStroke : "rgba(151,187,205,1)",
-                borderWidth: 1,
-            }],
-
-}
-window.onload=function () {
-    var ctx = document.getElementById("myChart").getContext("2d");
-    window.myBar= new Chart(ctx).Bar(barData,{resposive:true
-    });
-}
+	{% block footer %}
+	{% endblock%}
+</div>
+	<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+	<script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'js/Chart.min.js' %}"></script>
+	{% block extrajs %}
+	{% endblock %}
 
 
-</script>
-
-{% endblock %}
+</body>
+</html>
