--- a/templates/reserva/crear_reserva_especifica.html
+++ b/templates/reserva/crear_reserva_especifica.html
@@ -9,7 +9,9 @@
 <!--  -->
     <h3 class="text-muted list-group">Creación de Reserva Especifica</h3>
 
-    {{ form.as_p}}
+        <label for="profile">Usuario</label>
+        <input class="form-control" id="profile" value="{{ user }}" name="profile">
+                    {{ form.as_p}}
 
 <hr>
 <div class="form-group">
