Corregido Modificar datos de Recursos y lista de caracteristicas en Tipo Recurso

--- a/templates/recurso_pr/modificar_recurso.html
+++ b/templates/recurso_pr/modificar_recurso.html
@@ -6,12 +6,12 @@
     <h3 class="text-muted list-group">Modificación de Recurso</h3>
     <div class="form-group">
         <label class="col-md-4 control-label ">Tipo de Recurso</label>
-        <div class="col-md-4">{{ form.tipo_id }}</div>
+        <div class="col-md-4 "><fieldset disabled="disabled">
+            {{ form.tipo_id }}
+        </fieldset></div>
+
     </div>
-    <div class="form-group">
-        <label class="col-md-4 control-label ">Estado</label>
-        <div class="col-md-4">{{ form.estado }}</div>
-    </div>
+
     <div class="form-group">
         <label class="col-md-4 control-label ">Identificador del Recurso</label>
         <div class="col-md-4">{{ form.descripcion }}</div>
