--- a/templates/recurso_pr/crear_tipo_recurso_pr.html
+++ b/templates/recurso_pr/crear_tipo_recurso_pr.html
@@ -18,11 +18,11 @@
         <div class="form-group">
             <button class="btn btn-primary" formnovalidate name="crear" value="Listar recursos" type="submit">Agregar Caracteristica</button>
         </div>
-        {{ rform.caracts }}
+
         <hr>
         <div class="form-group">
             <button class="btn btn-primary" formnovalidate name="guardar" value="guardar" type="submit">Guardar</button>
-            <button class= "btn btn-default" name="cancelar" value="cancelar" href="{% url 'recurso_pr:recurso_pr_listar_tipo' %}">Cancelar</button>
+            <a class= "btn btn-default" href="{% url 'recurso_pr:recurso_pr_listar_tipo' %}">Cancelar</a>
         </div>
     {% if mensaje %}
 								{% if mensaje == 'Tipo de Recurso Guardado Exitosamente.' %}
