--- a/templates/usuarios/eliminar_usuario.html
+++ b/templates/usuarios/eliminar_usuario.html
@@ -6,7 +6,7 @@
 {% block content %}
 <form method="post">
 	{% csrf_token %}
-	<h3>¿Desea eliminar el registro de {{ object.nombre }}?</h3>
+	<h3>¿Desea eliminar el registro del usuario: {{ object.user.first_name }} {{ object.user.last_name }}?</h3>
 	<button class="btn btn-danger" type="submit">Sí, eliminar</button>
 	<a class= "btn btn-default" href="{% url 'usuarios:listaruser' %}">Cancelar</a>
 </form>
