--- a/templates/rol/home_rol.html
+++ b/templates/rol/home_rol.html
@@ -43,7 +43,7 @@
 
                             <h3>Modulo de Recurso</h3>
                                   <h6>Recurso:</h6>
-                                  <a class="btn btn-info btn-read-more" href="{% url 'recurso_pr:recurso_pr_crear' %}">Crear Recurso</a>
+                                  <a class="btn btn-info btn-read-more" href="{% url 'recurso_pr:recurso_pr_crear_recurso' %}">Crear Recurso</a>
                            <a class="btn btn-info btn-read-more" href="{% url 'recurso_pr:recurso_pr_listar' %}">Listar Recursos</a>
                                   <h6>Tipo de Recurso:</h6>
                               <a class="btn btn-info btn-read-more" href="{% url 'recurso_pr:recurso_pr_crear' %}">Crear Tipo Recurso</a>
@@ -53,17 +53,20 @@
                               <hr>
                                <div class="content-holder">
                             <h3>Modulo de Reserva</h3>
-                                   <h6>Reserva General:</h6>
-                           <a class="btn btn-info btn-read-more" href="{% url 'reserva:buscar_recurso' %}">Crear Reserva General</a>
-                                   <a class="btn btn-info btn-read-more" href="{% url 'reserva:reserva_listar' %}">Reserva General</a>
-                              <h6>Reserva Especifica:</h6>
-                                   <a class="btn btn-info btn-read-more" href="{% url 'reserva:buscar_recurso_especifico' %}">Crear R. Especifica</a>
-                                   <a class="btn btn-info btn-read-more" href="{% url 'reserva:reserva_especifica_listar' %}">Listar R. Especifica</a>
+
+                           <a class="btn btn-info btn-read-more" href="{% url 'reserva_new:reserva_solicitar' %}">Solicitar Reserva</a>
+                                   <a class="btn btn-info btn-read-more" href="{% url 'reserva_new:listar_reservas_user' %}">Mis Reservas</a>
+
                           </div>
                               <hr>
                                <div class="content-holder">
                             <h3>Modulo de Mantenimiento</h3>
-                           <a class="btn btn-info btn-read-more" href="{% url 'mantenimiento:mantenimiento_listar' %}">Mantenimiento</a>
+                                   <h6>Mantenimiento Correctivo:</h6>
+                                   <a class="btn btn-info btn-read-more" href="{% url 'mantenimiento:mantenimiento_crear' %}">Crear Mant. Correctivo</a>
+                            <h6>Mantenimiento Preventivo:</h6>
+                                   <a class="btn btn-info btn-read-more" href="{% url 'mantenimiento:mantenimiento_crear_prevent' %}">Crear Mant. Preventivo</a>
+                                 <h6> Lista de Mantenimientos:</h6>
+                                   <a class="btn btn-info btn-read-more" href="{% url 'mantenimiento:mantenimiento_listar' %}">Lista de Mantenimiento</a>
 
                         </div>
                       </rnsediv>
